<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/trackChild" />
        <item
            android:id="@+id/nav_location"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/changeLoc" />
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/messagesNotification" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contactCall" />
    </group>

    <item android:title="@string/settingMenu">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/info" />
        </menu>
    </item>

</menu>
